--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/library_detail.html
@@ -1,7 +1,8 @@
+<!-- library_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Library Detail</title>
 </head>
 <body>
@@ -9,9 +10,7 @@
     <h2>Books in Library:</h2>
     <ul>
         {% for book in library.books.all %}
-            <li>{{ book.title }} by {{ book.author.name }}{% if book.publication_year %} (Published {{ book.publication_year }}){% endif %}</li>
-        {% empty %}
-            <li>No books found in this library.</li>
+        <li>{{ book.title }} by {{ book.author.name }}</li>
         {% endfor %}
     </ul>
 </body>
