--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/ member_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/ member_view.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Member Page</title>
-</head>
+<head><meta charset="UTF-8"><title>Member Page</title></head>
 <body>
     <h1>Welcome, Member!</h1>
-    <p>This page is restricted to Member users.</p>
+    <p>You can browse and borrow books.</p>
 </body>
 </html>
