--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/librarian_view.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Librarian Page</title>
-</head>
+<head><meta charset="UTF-8"><title>Librarian Page</title></head>
 <body>
     <h1>Welcome, Librarian!</h1>
-    <p>This page is restricted to Librarian users.</p>
+    <p>You can manage books and libraries.</p>
 </body>
 </html>
